--- a/mystyle.css
+++ b/mystyle.css
@@ -70,10 +70,12 @@ h1 {
 }
 
 a {
-    color: red;
+    color: steelblue;
     text-decoration: none;
     font-weight: 600;
     margin: 10px;
+    border: 1px, dashed, red;
+    border-radius: .5em;
 }
 
 .box {
@@ -144,7 +146,7 @@ a {
 }
 
 .ent {
-    color: rgb(96, 92, 165);
+    color: red;
     background: rgb(222, 222, 231);
     width: 450px;
     margin-bottom: -1px;
