--- a/mystyle.css
+++ b/mystyle.css
@@ -76,6 +76,7 @@ a {
     margin: 10px;
     border: 1px, dashed, red;
     border-radius: .5em;
+    background: rgb(234, 20, 20);
 }
 
 .box {
@@ -148,11 +149,11 @@ a {
 .ent {
     color: red;
     background: rgb(222, 222, 231);
-    width: 450px;
+    width: 480px;
     margin-bottom: -1px;
-    border-radius: .6em;
+    border-radius: .4em;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 
