--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@ body{
     background-color: rgb(19, 22, 66);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    background: url(../silhouette-photography-of-man-and-woman-beside-trees-during-1024973.jpg);
+    background: url(./silhouette-photography-of-man-and-woman-beside-trees-during-1024973.jpg);
     background-size: cover;
 }
 
